--- a/index.html
+++ b/index.html
@@ -148,6 +148,38 @@
                     </div>
 
                 </div>
+
+
+            </div>
+
+        </section>
+
+        <section class="section-two">
+            <p class="product-category-title">PRE-ORDER PRODUCTS</p>
+
+            <div class="products">
+
+                <div class="card">
+                    <div class="card-content">
+                        <img class="product-image" src="images/p1 .jpg" alt="">
+                        <p class="product-title">Vintage Coffee Cups </p>
+                        <p class="product-price">BDT 1200</p>
+                        <div class="rating">
+                            <i class="fas fa-star" id="id1"></i>
+                            <i class="fas fa-star" id="id2"></i>
+                            <i class="fas fa-star" id="id3"></i>
+                            <i class="fas fa-star" id="id4"></i>
+                            <i class="far fa-star" id="id5"></i>
+                            <h6>4.00</h6>
+                        </div>
+                        <p class="product-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
+                            sit!
+                        </p>
+                        <a class="buy-now-btn" href="">Pre-Order Now</a>
+                    </div>
+
+                </div>
+                
                 <div class="card">
                     <div class="card-content">
                         <img class="product-image" src="images/instock 06.jpg" alt="">
@@ -164,7 +196,27 @@
                         <p class="product-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
                             sit!
                         </p>
-                        <a class="buy-now-btn" href="">Buy Now</a>
+                        <a class="buy-now-btn" href="">Pre-Order Now</a>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <img class="product-image" src="images/p2.jpg" alt="">
+                        <p class="product-title">Scandinavian Home Decor Luxury,Home Decor Wall Art </p>
+                        <p class="product-price">BDT 1000</p>
+                        <div class="rating">
+                            <i class="fas fa-star" id="id1"></i>
+                            <i class="fas fa-star" id="id2"></i>
+                            <i class="fas fa-star" id="id3"></i>
+                            <i class="fas fa-star" id="id4"></i>
+                            <i class="far fa-star" id="id5"></i>
+                            <h6>4.00</h6>
+                        </div>
+                        <p class="product-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
+                            sit!
+                        </p>
+                        <a class="buy-now-btn" href="">Pre-Order Now</a>
                     </div>
 
                 </div>
@@ -184,62 +236,10 @@
                         <p class="product-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
                             sit!
                         </p>
-                        <a class="buy-now-btn" href="">Buy Now</a>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </section>
-
-        <section class="section-two">
-            <p class="product-category-title">PRE-ORDER PRODUCTS</p>
-
-            <div class="products">
-
-                <div class="card">
-                    <div class="card-content">
-                        <img class="product-image" src="images/instock 01.jpg" alt="">
-                        <p class="product-title">Norton Style Marble Pattern Luxury Mug</p>
-                        <p class="product-price">BDT 1200</p>
-                        <div class="rating">
-                            <i class="fas fa-star" id="id1"></i>
-                            <i class="fas fa-star" id="id2"></i>
-                            <i class="fas fa-star" id="id3"></i>
-                            <i class="fas fa-star" id="id4"></i>
-                            <i class="far fa-star" id="id5"></i>
-                            <h6>4.00</h6>
-                        </div>
-                        <p class="product-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
-                            sit!
-                        </p>
                         <a class="buy-now-btn" href="">Pre-Order Now</a>
                     </div>
 
                 </div>
-                <div class="card">
-                    <div class="card-content">
-                        <img class="product-image" src="images/instock 02.jpg" alt="">
-                        <p class="product-title">EUROPEAN COFFEE CUP & SAUCER SET</p>
-                        <p class="product-price">BDT 900</p>
-                        <div class="rating">
-                            <i class="fas fa-star" id="id1"></i>
-                            <i class="fas fa-star" id="id2"></i>
-                            <i class="fas fa-star" id="id3"></i>
-                            <i class="fas fa-star" id="id4"></i>
-                            <i class="far fa-star" id="id5"></i>
-                            <h6>4.00</h6>
-                        </div>
-                        <p class="product-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum,
-                            sit!
-                        </p>
-                        <a class="buy-now-btn" href="">Pre-Order Now</a>
-                    </div>
-
-                </div>
-                
-
             </div>
 
         </section>
